--- a/blog1-website/about.Rmd
+++ b/blog1-website/about.Rmd
@@ -1,9 +1,28 @@
 ---
 title: "Reference"
-description: |
-  Some additional details about the blog
 ---
 
 ```{r setup, include=FALSE}
 knitr::opts_chunk$set(echo = FALSE)
 ```
+
+### Websites
+
+- Andrenoi. M., (2021, June 2). Coronavirus in Brazil: What You Need to Know. The New York Times. https://www.nytimes.com/article/brazil-coronavirus-cases.html
+
+- Our Data in World. (2021). owid. https://github.com/owid/covid-19-data/tree/master/public/data
+
+
+### R-packages
+
+- Hao Zhu (2021). kableExtra: Construct Complex Table with 'kable' and Pipe Syntax. R package version 1.3.4. https://CRAN.R-project.org/package=kableExtra
+
+- JJ Allaire, Rich Iannone, Alison Presmanes Hill and Yihui Xie (2021). distill: 'R Markdown' Format for Scientific and Technical Writing. R package version 1.2. https://CRAN.R-project.org/package=distill
+
+- Ramnath Vaidyanathan, Kent Russell and Gareth Watts (2016). sparkline: 'jQuery' Sparkline 'htmlwidget'. R package version 2.0. https://CRAN.R-project.org/package=sparkline
+
+- Wickham et al., (2019). Welcome to the tidyverse. Journal of Open Source Software, 4(43), 1686, https://doi.org/10.21105/joss.01686
+
+- Yihui Xie (2021). knitr: A General-Purpose Package for Dynamic Report Generation in R. R package version 1.33.
+
+- Yihui Xie, Joe Cheng and Xianying Tan (2021). DT: A Wrapper of the JavaScript Library 'DataTables'. R package version 0.18. https://CRAN.R-project.org/package=DT
