--- a/blog1-website/_posts/welcome/welcome.Rmd
+++ b/blog1-website/_posts/welcome/welcome.Rmd
@@ -1,5 +1,5 @@
 ---
-title: "Brief COVID-19 Analysis in Brazili"
+title: "Brief COVID-19 Analysis in Brazil"
 description: |
   This blog is aiming to explore the COVID-19 situation in Brazil and examining whether the process of people being vaccinated had an effect on decreasing the confirmed COVID-cases in Brazil in 2021.
 author:
