--- a/about.Rmd
+++ b/about.Rmd
@@ -17,6 +17,8 @@ knitr::opts_chunk$set(echo = FALSE)
 
 #### R-packages
 
+- C. Sievert. Interactive Web-Based Data Visualization with R, plotly, and shiny. Chapman and Hall/CRC Florida, 2020.
+
 - Hao Zhu (2021). kableExtra: Construct Complex Table with 'kable' and Pipe Syntax. R package version 1.3.4. https://CRAN.R-project.org/package=kableExtra
 
 - JJ Allaire, Rich Iannone, Alison Presmanes Hill and Yihui Xie (2021). distill: 'R Markdown' Format for Scientific and Technical Writing. R package version 1.2. https://CRAN.R-project.org/package=distill
@@ -28,3 +30,24 @@ knitr::opts_chunk$set(echo = FALSE)
 - Yihui Xie (2021). knitr: A General-Purpose Package for Dynamic Report Generation in R. R package version 1.33.
 
 - Yihui Xie, Joe Cheng and Xianying Tan (2021). DT: A Wrapper of the JavaScript Library 'DataTables'. R package version 0.18. https://CRAN.R-project.org/package=DT
+
+### Reference used for COVID-19 analysis in Brazil
+
+#### Websites
+
+- Our Data in World. (2021). owid. https://github.com/owid/covid-19-data/tree/master/public/data
+
+#### R-packages
+
+- Barret Schloerke, Di Cook, Joseph Larmarange, Francois Briatte, Moritz Marbach, Edwin Thoen, Amos Elberg and Jason Crowley (2021). GGally: Extension to 'ggplot2'. R package version 2.1.2. https://CRAN.R-project.org/package=GGally
+
+- C. Sievert. Interactive Web-Based Data Visualization with R, plotly, and shiny. Chapman and Hall/CRC Florida, 2020.
+
+- Hao Zhu (2021). kableExtra: Construct Complex Table with 'kable' and Pipe Syntax. R package version 1.3.4. https://CRAN.R-project.org/package=kableExtra
+
+- JJ Allaire, Rich Iannone, Alison Presmanes Hill and Yihui Xie (2021). distill: 'R Markdown' Format for Scientific and Technical Writing. R package version 1.2. https://CRAN.R-project.org/package=distill
+
+- Wickham et al., (2019). Welcome to the tidyverse. Journal of Open Source Software, 4(43), 1686, https://doi.org/10.21105/joss.01686
+
+- Yihui Xie (2021). knitr: A General-Purpose Package for Dynamic Report Generation in R. R package version 1.33.
+
